# misskey-inviter-discord

./: LICENSE  README.md  main.py  pyproject.toml
resources/: misskey-inviter.service
